--- a/Footer.css
+++ b/Footer.css
@@ -5,8 +5,13 @@ body {
     margin: 0;
 }
 
+main {
+    flex: 1;
+}
+
 footer {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     background-color: #f0f0f0;
     padding: 20px;
@@ -14,8 +19,8 @@ footer {
 }
 
 footer div {
-    flex: 1;
-    margin-right: 20px;
+    flex-basis: 30%; /* aanpassen aan de gewenste breedte */
+    margin-bottom: 20px;
 }
 
 footer h3 {
@@ -23,7 +28,6 @@ footer h3 {
 }
 
 div.footer-bottom {
-    margin-top: auto;
     text-align: center;
     background-color: #ddd;
     padding: 10px;
