--- a/leden.css
+++ b/leden.css
@@ -1,12 +1,22 @@
 .robj
 {
-    height: 300px;
-    padding-left: 300px;
+    width: 1000px;
+    padding-left: 700px;
     border-top: 250px;
 }
 .naam1
 {
-    padding-left: 300px;
+    padding-left: 700px;
+}
+.naam2
+{
+    float: right ;
+    padding-top: 400px;    
+}
+.sigridk
+{
+    float: right;
+    padding-right: 500px;
 }
 .teamleden
 {
@@ -17,6 +27,6 @@
 {
     font-family: Arial, Helvetica, sans-serif;
     font-size: xx-large;
-    padding-left: 600px;
-    padding-top: 150px;
+    padding-left: 1100px;
+    padding-top: 100px;
 }
