--- a/index.css
+++ b/index.css
@@ -1,41 +1,145 @@
-body
-{
+body {
+    font-family: 'EloquiaDisplay-ExtraBold';
     margin: 0;
     padding: 0;
 }
-.page1
-{
+
+.page1 {
     background-color: orange;
     height: 100vh;
 }
-.page2
-{
+
+.page2 {
     background-color: lightblue;
     height: 100vh;
+    margin: 0px;
 }
-.image1
-{
+.page3 {
+    background-color: rgba(245,234,228,255);
+    height: 100vh;
+    margin: 0px;
+}
+
+.image1 {
     max-width: 70%;
     height: 100vh;
     margin: 0;
 }
-.steun
-{
+
+.steun {
     position: absolute;
     margin-top: -500px;
     margin-left: 50px;
     color: white;
     font-size: 70px;
     font-weight: bold;
-    font-family: 'EloquiaDisplay-ExtraBold';
 }
+
 @font-face {
     font-family: 'EloquiaDisplay-ExtraBold';
     src: url('font/EloquiaDisplayExtraBold.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
 }
-.embed
-{
+
+.embed {
     justify-content: left;
+    margin-left: -990px;
+    margin-bottom: 50px;
+    border-radius: 10px;
+    width: 400px;
+}
+
+.sluit {
+    font-size: 30px;
+    margin-left: 1080px;
+    margin-top: -300px;
+}
+
+.txt1 {
+    margin-left: 1080px;
+    font-size: 18px;
+}
+
+.lidbutton {
+    font-size: 18px;
+    border: 0px;
+    font-family: 'EloquiaDisplay-ExtraBold';
+    background-color: transparent;
+    margin-left: 1080px;
+}
+
+/* page 2 */
+
+.klimaat {
+
+    position: absolute;
+    margin-left: 50px;
+    font-size: 60px;
+    font-weight: bold;
+
+}
+.txt2
+{
+    font-size: 20px;
+    position: absolute;
+    margin-top: 290px;
+    margin-left: 50px;
+}
+.plannenbutton
+{
+    cursor: pointer;
+    margin-top:400px;
+    font-size: 18px;
+    width: 150px;
+    height: 50px;
+    border-radius: 10px;
+    margin-left: 50px;
+    color: white;
+    font-family: 'EloquiaDisplay-ExtraBold';
+    background-color: black;
+}
+.klimaatimg
+{
+    position: absolute;
+    border-radius: 10px;
+    width: 700px;
+    height: 500px;
+    margin-left: 500px;
+    margin-top: 80px;
+}
+
+/* page3 */
+
+.nieuws
+{
+    position: absolute;
+    margin-left: 50px;
+    margin-top: 80px;
+    font-size: 60px;
+    font-weight: bold;
+}
+.nieuwsimage
+{
+    width: 600px;
+    height: 400px;
+    margin-left: 800px;
+    margin-top: 100px;
+}
+.txt3
+{
+    font-size: 30px;
+    margin-left: 50px;
+    margin-top: -300px;
+}
+.nieuwsbutton
+{
+    cursor: pointer;
+    margin-left: 50px;
+    font-size: 20px;
+    color: white;
+    background-color: black;
+    font-family: 'EloquiaDisplay-ExtraBold';
+ height: 50px;
+    width: 200px;
 }
