--- a/style.css
+++ b/style.css
@@ -1,22 +1,24 @@
 body{
-display:grid;
-grid-template-rows: repeat(3,auto);
-grid-template-areas: 
+    display:grid;
+    grid-template-rows: repeat(3,auto);
+    grid-template-areas: 
     "header"
     "main"
     "footer";
 }
 
 header{
-grid-area: header;
+    grid-area: header;
 }
 
 main{
-grid-area: main;
+    padding-top: 100px;
+    align-items: center;
+    grid-area: main;
 }
 
 footer{
-grid-area: footer;
-font-size:x-large;
-font-family: Arial, Helvetica, sans-serif;
+    grid-area: footer;
+    font-size:x-large;
+    font-family: Arial, Helvetica, sans-serif;
 }
