--- a/leden.css
+++ b/leden.css
@@ -1,4 +1,31 @@
-
+.robj
+{
+    padding-top: 20px;
+    width: 250px;
+}
+.naam1
+{
+    font-size: xx-large;
+    font-weight: bolder;
+}
+.info1
+{
+    font-size: x-large;
+}
+a
+{
+    padding-left: 25px;
+    text-decoration: none;
+}
+a:visited
+{
+    color: black;
+}
+.sigridk
+{
+    padding-top: 20px;
+    width: 250px;
+}
 .teamleden
 {
     font-family: Arial, Helvetica, sans-serif;
@@ -6,24 +33,26 @@
 }
 .pagetitle
 {
-    align-items: center;
     grid-area: title;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: xx-large;
+    font-size: xx-large;    
 }
 
 .lidg
 {
-    grid-area: lid5;
-    align-items: center;
-
+    grid-area: lid6;
+    background-color: #FF6961;
+    border-radius: 25px;
 }
 .lid1
 {
-    grid-area: lid1;
+    grid-area: lid7;
+    background-color: #C3B1E1;
+    border-radius: 25px;
 }
 .leden{
     display: grid;
+    grid-gap: 25px;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: auto;
     grid-template-areas: 
