--- a/leden.css
+++ b/leden.css
@@ -22,7 +22,7 @@ a
 }
 a:visited
 {
-    color: black;
+    color: white;
 }
 .sigridk
 {
@@ -43,6 +43,7 @@ a:visited
 }
 .teamleden
 {
+    padding-top: 100px  ;
     font-family: Arial, Helvetica, sans-serif;
     background-color: #f0e3ce;
 }
